<resources>
    <string name="app_name">Desaglomere</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ambientes">Ambientes</string>

    <string name="academia">Academia</string>
    <string name="quadra">Quadra</string>
    <string name="piscina">Piscina</string>
    <string name="festas">Salão de Festas</string>
    <string name="estudos">Salão de Estudos</string>
    <string name="jogos">Salão de Jogos</string>

    <string name="samambaia">Samambaia</string>
    <string name="cana">Canafístula</string>
    <string name="hibisco">Hibisco</string>

    <string name="confirmar">Confirmar</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>