<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ambientes.AmbientesFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnAcademia"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="30dp"
                android:text="@string/academia"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnQuadra"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="30dp"
                android:text="@string/quadra"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnPiscina"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="30dp"
                android:text="@string/piscina"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnSalao"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="30dp"
                android:text="@string/salao"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>