<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".ui.festas.FestasActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="535dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgPredios" />

    <TextView
        android:id="@+id/tvDataFestas"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:onClick="openDatePicker"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHorarioFestas"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="2"
        android:drawableStart="@drawable/ic_time_24"
        android:onClick="openTimePicker"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDataFestas" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHorarioFestas"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="535dp"
        android:textSize="20dp"
        android:text="Escolha o edifício"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <RadioGroup
        android:id="@+id/rgPredios"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/rbCanafistula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <RadioButton
            android:id="@+id/rbCanafistula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cana" />

        <RadioButton
            android:id="@+id/rbHibisco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hibisco" />

        <RadioButton
            android:id="@+id/rbSamambaia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/samambaia" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>